# denoise

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  denoise.c  denoise.h  depends.txt
source/: CMakeLists.txt  denoise.c
utils/: compare.py  spectrograms.py
